[package]
name = "tera"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async_once = "0.2.6"
byteorder = "1.5.0"
candle-core = { git = "https://github.com/huggingface/candle", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle", version = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle", version = "0.5.1" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
lazy_static = "1.4.0"
pdf-extract = "0.7.7"
prettytable-rs = "0.10.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
surrealdb = { version = "1.5.1", features = ["kv-rocksdb"] }
tempfile = "3.10.1"
tokenizers = "0.19.1"
tokio = { version = "1.37.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
wav = "1.0.1"
